# rs-template

./: LICENSE  README.md  api.html  cli.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  tox.ini
.github/workflows/: build_docs.yml  ci.yml  cron.yml
_sources/: api.md
_static/: documentation_options.js
docs/: Makefile  api.md  cli.md  conf.py  index.md
src/rs_template/: __init__.py  _command_line.py  python_library.py
