# https://peps.python.org/pep-0517/
[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# https://peps.python.org/pep-0621/
[project]
name = "rs-template"
# versioning through releases
description = "Template package for Reciprocal Space Station"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "BSD 3-Clause License" }
authors = [
    { email = "debrookner@gmail.com", name = "Dennis Brookner" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dynamic = ["version"]
# version='0.0.1'

dependencies = [
    "numpy",
    "tqdm",
    "reciprocalspaceship>=1.0.1",
]

# extras
# https://peps.python.org/pep-0621/#dependencies-optional-dependencies
[project.optional-dependencies]
test = ["pytest>=6.0", "pytest-cov"]

docs = [
    "sphinx",
    "myst_parser",
    "sphinxcontrib_autoprogram",
    "sphinx_rtd_theme"
]

[project.urls]
homepage = "https://rs-station.github.io/rs-template/"
repository = "https://github.com/rs-station/rs-template"

# same as console_scripts entry point
[project.scripts]
"rs.template" = "rs_template._command_line:main"

# https://hatch.pypa.io/latest/config/metadata/
[tool.hatch.version]
source = "vcs"

# # this can be deleted once a new rs-booster version has been released
# [tool.hatch.metadata]
# allow-direct-references = true
